// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
  role="log"
>
  <Relay(IgnoredTombstoneOrHideContainer)
    comment={
      Object {
        "id": "comment-1",
      }
    }
    key="comment-1"
    viewer={null}
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        disableReplies={false}
        indentLevel={1}
        key="comment-1"
        localReply={false}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        showConversationLink={false}
        story={
          Object {
            "id": "story-id",
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
  </Relay(IgnoredTombstoneOrHideContainer)>
  <Relay(IgnoredTombstoneOrHideContainer)
    comment={
      Object {
        "id": "comment-2",
        "showConversationLink": true,
      }
    }
    key="comment-2"
    viewer={null}
  >
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
            "showConversationLink": true,
          }
        }
        disableReplies={false}
        indentLevel={1}
        key="comment-2"
        localReply={false}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        showConversationLink={true}
        story={
          Object {
            "id": "story-id",
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
  </Relay(IgnoredTombstoneOrHideContainer)>
</ForwardRef(forwardRef)>
`;

exports[`when there is more disables load more button 1`] = `
<ForwardRef(forwardRef)
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
  role="log"
>
  <Relay(IgnoredTombstoneOrHideContainer)
    comment={
      Object {
        "id": "comment-1",
      }
    }
    key="comment-1"
    viewer={null}
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        indentLevel={1}
        key="comment-1"
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        showConversationLink={false}
        story={
          Object {
            "id": "story-id",
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
  </Relay(IgnoredTombstoneOrHideContainer)>
  <Relay(IgnoredTombstoneOrHideContainer)
    comment={
      Object {
        "id": "comment-2",
      }
    }
    key="comment-2"
    viewer={null}
  >
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        indentLevel={1}
        key="comment-2"
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        showConversationLink={false}
        story={
          Object {
            "id": "story-id",
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
  </Relay(IgnoredTombstoneOrHideContainer)>
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <ForwardRef(forwardRef)
        aria-controls="coral-comments-replyList-log--comment-id"
        disabled={true}
        fullWidth={true}
        id="coral-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </ForwardRef(forwardRef)>
    </Localized>
  </Indent>
</ForwardRef(forwardRef)>
`;

exports[`when there is more renders a load more button 1`] = `
<ForwardRef(forwardRef)
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
  role="log"
>
  <Relay(IgnoredTombstoneOrHideContainer)
    comment={
      Object {
        "id": "comment-1",
      }
    }
    key="comment-1"
    viewer={null}
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        indentLevel={1}
        key="comment-1"
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        showConversationLink={false}
        story={
          Object {
            "id": "story-id",
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
  </Relay(IgnoredTombstoneOrHideContainer)>
  <Relay(IgnoredTombstoneOrHideContainer)
    comment={
      Object {
        "id": "comment-2",
      }
    }
    key="comment-2"
    viewer={null}
  >
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        indentLevel={1}
        key="comment-2"
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        showConversationLink={false}
        story={
          Object {
            "id": "story-id",
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
  </Relay(IgnoredTombstoneOrHideContainer)>
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <ForwardRef(forwardRef)
        aria-controls="coral-comments-replyList-log--comment-id"
        disabled={false}
        fullWidth={true}
        id="coral-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </ForwardRef(forwardRef)>
    </Localized>
  </Indent>
</ForwardRef(forwardRef)>
`;
